# math-interpreter

MathImp/: .clang-format  CMakeLists.txt  main.cpp
MathImp/include/: core.hpp  lexer.hpp
MathImp/include/base/: interpreter.cpp  lexer.cpp
MathImp/include/typing/: AbstractObject.hpp  Variable.cpp  Variable.h  matrix.h  number.cpp  number.h  rational.cpp  rational.h  string.cpp  tokenTypes.hpp  variable.cpp  variable.h  vector.cpp  vector.h
MathImp/src/: core.hpp
MathImp/src/base/: errorHandler.hpp  history.cpp  history.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  outputHandler.hpp
MathImp/src/typing/: matrix.cpp  matrix.h  number.cpp  number.h  rational.h  string.h  tokenTypes.hpp  variable.cpp  variable.h  vector.cpp  vector.h
MathImp/tests/: history_test.cpp  lexer_test.cpp  matrix_test.cpp  rational_test.cpp  string_test.cpp  vector_test.cpp
math_inter_wrapper/: CMakeLists.txt  MIWrapper.pro  mainwindow.cpp  mainwindow.h  resources.qrc
math_inter_wrapper/src/: main.cpp
math_inter_wrapper/src/models/: TerminalModel.cpp  TerminalModel.h
math_inter_wrapper/src/viewmodels/: TerminalViewModel.cpp  TerminalViewModel.h
math_inter_wrapper/src/views/: TerminalView.qml
math_inter_wrapper/ui/: UntitledProject3.qmlproject
math_inter_wrapper/ui/UntitledProject3Content/: App.qml
